--- a/src/i18n/locales/vi/translation.json
+++ b/src/i18n/locales/vi/translation.json
@@ -10,6 +10,7 @@
   },
   "sidebar": {
     "general": "Chung",
+    "models": "Mô hình",
     "advanced": "Nâng cao",
     "postProcessing": "Xử lý sau",
     "history": "Lịch sử",
@@ -25,6 +26,7 @@
       "accuracy": "độ chính xác",
       "speed": "tốc độ"
     },
+    "customModelDescription": "User-provided model in local models folder",
     "models": {
       "small": {
         "name": "Whisper Small",
@@ -81,7 +83,12 @@
     "modelError": "Lỗi Mô Hình",
     "modelUnloaded": "Mô Hình Đã Gỡ",
     "noModelDownloadRequired": "Chưa Có Mô Hình - Cần Tải Xuống",
-    "deleteModel": "Xóa {{modelName}}"
+    "deleteModel": "Xóa {{modelName}}",
+    "custom": "Custom",
+    "customModelsHelpTitle": "Custom Whisper Models",
+    "customModelsHelpDescription": "Place Whisper GGML .bin files into the app models folder. They are detected on startup and shown here as custom models.",
+    "customModelsHelpHint": "After adding files, restart AivoRelay to refresh the model list.",
+    "customModelsDetected": "Detected custom models: {{count}}"
   },
   "settings": {
     "general": {
@@ -155,6 +162,10 @@
         "label": "Khởi động cùng hệ thống",
         "description": "Tự động khởi động AivoRelay khi bạn đăng nhập vào máy tính."
       },
+      "showTrayIcon": {
+        "label": "Hiển thị biểu tượng khay",
+        "description": "Hiển thị biểu tượng AivoRelay trong khay hệ thống."
+      },
       "overlay": {
         "title": "Vị trí lớp phủ",
         "description": "Hiển thị lớp phủ phản hồi trực quan trong quá trình ghi âm và chuyển đổi. Trên Linux, 'Không có' được khuyến nghị.",
@@ -181,6 +192,17 @@
         "options": {
           "dontModify": "Không sửa đổi Clipboard",
           "copyToClipboard": "Sao chép vào Clipboard"
+        }
+      },
+      "autoSubmit": {
+        "title": "Gửi tự động",
+        "description": "Tự động gửi tổ hợp phím đã chọn sau khi chèn văn bản. Cmd+Enter áp dụng trên macOS, còn Windows/Linux dùng Super+Enter.",
+        "options": {
+          "off": "Tắt",
+          "enter": "Enter",
+          "cmdEnter": "Cmd+Enter",
+          "superEnter": "Super+Enter",
+          "ctrlEnter": "Ctrl+Enter"
         }
       },
       "translateToEnglish": {
@@ -335,6 +357,10 @@
       "appendTrailingSpace": {
         "label": "Thêm dấu cách cuối",
         "description": "Thêm một dấu cách sau bản ghi đã dán"
+      },
+      "filterSilence": {
+        "label": "Lọc khoảng lặng",
+        "description": "Sử dụng phát hiện hoạt động giọng nói để loại bỏ khoảng lặng khỏi bản ghi trước khi chuyển đổi. Thử vô hiệu hóa nếu gặp sự cố, như các phần giọng nói bị xóa. Vô hiệu hóa có thể dẫn đến \"ảo giác\" thường xuyên hơn trong đầu ra."
       },
       "paths": {
         "appData": "Dữ liệu ứng dụng:",
