--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1662,6 +1662,34 @@
     "cleanupDescription": "Automatically remove common speech artifacts from the final text.",
     "beforeLlm": "Apply Before LLM Post-Processing",
     "beforeLlmDescription": "When enabled, text replacements are applied BEFORE LLM processing. This prevents the LLM from modifying your replacement patterns.",
+    "decapitalizeAfterEditTitle": "Decapitalize After Manual Edit",
+    "decapitalizeAfterEditGroupDescription": "Independent feature: monitors your edit key and can lowercase the next suitable transcript chunk even when Text Replacement rules are disabled.",
+    "decapitalizeAfterEditDescription": "Passively monitor one key (default: Backspace). After pressing it, the next suitable transcription chunk can start with lowercase to avoid unwanted sentence capitalization.",
+    "decapitalizeAfterEditEnableLabel": "Enable Decapitalize After Edit Key",
+    "decapitalizeAfterEditEnableDescription": "Use a passive keyboard hook (non-blocking) to detect manual edits and lowercase the next matching chunk.",
+    "decapitalizeAfterEditKeyLabel": "Monitored Key",
+    "decapitalizeAfterEditKeyDescription": "Click the field and press any key or key combination. Monitoring is passive, and any combo containing the monitored key also counts.",
+    "decapitalizeAfterEditComboHint": "If you choose Backspace, Ctrl+Backspace also triggers.",
+    "decapitalizeAfterEditConflictWarningTitle": "Potential overlap with other shortcuts:",
+    "decapitalizeAfterEditConflictWarningDescription": "Decap monitor may also trigger when these shortcuts are pressed.",
+    "decapitalizeAfterEditTimeoutLabel": "Trigger Timeout",
+    "decapitalizeAfterEditTimeoutDescription": "How long (in milliseconds) the decapitalize trigger stays active after pressing the monitored key.",
+    "decapitalizeAfterEditStandardPostMonitorLabel": "Standard STT Post-stop Monitor Window",
+    "decapitalizeAfterEditStandardPostMonitorDescription": "After stopping a standard (non-realtime) recording, keep listening for the monitored key for this many milliseconds. 0 disables this extra window.",
+    "decapitalizeAfterEditCaptureButton": "Capture Key",
+    "decapitalizeAfterEditCaptureButtonListening": "Press keys...",
+    "decapitalizeAfterEditTellMeMoreTitle": "Tell me more: Decapitalize After Manual Edit",
+    "decapitalizeAfterEditHowItWorksTitle": "How it works",
+    "decapitalizeAfterEditStandardModeTitle": "Standard STT:",
+    "decapitalizeAfterEditStandardModeDesc": "after stop-recording in standard STT, AivoRelay can keep monitoring for the configured post-stop window. If you press the monitored key there, the next matching uppercase-start output is decapitalized.",
+    "decapitalizeAfterEditRealtimeModeTitle": "Realtime API:",
+    "decapitalizeAfterEditRealtimeModeDesc": "while live chunk typing is running, the next incoming matching chunk that starts uppercase is decapitalized immediately, then the trigger is consumed.",
+    "decapitalizeAfterEditLanguageNote": "If the language/script has no uppercase/lowercase distinction, nothing is changed.",
+    "decapitalizeAfterEditExampleTitle": "Example",
+    "decapitalizeAfterEditExample1": "You dictated: This is knight.",
+    "decapitalizeAfterEditExample2": "You delete the last word with Backspace.",
+    "decapitalizeAfterEditExample3": "You dictate again: night.",
+    "decapitalizeAfterEditExample4": "Result becomes: This is night. (not This is Night.)",
     "helpTitle": "How to use special characters",
     "escapeSequences": "Escape Sequences",
     "escapeIntro": "Use these codes to match or insert special characters:",
